--- a/TextIt/Info.plist
+++ b/TextIt/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Please allow access to microphone for audio and video messages</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to select photo from gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow access to capture a photo</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
